@@ -38,7 +38,7 @@ PROJECT_NAME           = "covafill"
 # could be handy for archiving the generated documentation or if some version
 # control system is used.
 
-PROJECT_NUMBER         = v0.2.3
+PROJECT_NUMBER         = v0.3.0
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description
 # for a project that appears at the top of each page and should give viewer a
