@@ -1,10 +1,14 @@
 Covafillr News
 
 
-CHANGES IN VERSION 0.2.2
+CHANGES IN VERSION 0.x.y
+
+	NEW FEATURES:
+	    - It is now possible to get standard deviations for estimates with covafill.
 
 	BUG FIXES:
 	    - covafill$predict now set colnames correctly for p=2.
+	    - Weight matrix in covafill used sqrt of kernel weights.
 
 VERSION 0.2.1:
 	First publicly available version
